k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      containers:
      - name: node-service
        image: ziad10010/node-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-service
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
