k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortner-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: urlshortner.local
    http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 8080
      - path: /go
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 8080
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 8080
